Add minor style fixes to article-summary and article-shortcuts

--- a/apps/havana500-webclient/src/app/features/home/smart/article-shortcuts/article-shortcuts.component.scss
+++ b/apps/havana500-webclient/src/app/features/home/smart/article-shortcuts/article-shortcuts.component.scss
@@ -1,1 +1,6 @@
-@import "~bootstrap/dist/css/bootstrap.css";
+@import '~bootstrap/dist/css/bootstrap.css';
+
+.mat-tab-body-content {
+  padding: 1rem;
+  overflow: hidden !important;
+}
