--- a/apps/havana500-webclient/src/app/features/home/dummy/principal-slider/principal-slider.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/principal-slider/principal-slider.component.html
@@ -1,1 +1,3 @@
-<img fxFill src="../../../../../assets/images/main-slider.png">
+<slideshow [height]="height" [minHeight]="'525px'" [autoPlay]="true" [showArrows]="false" [imageUrls]="imageUrls"
+    [lazyLoad]="imageUrls?.length > 1" [autoPlayWaitForLazyLoad]="true">
+</slideshow>
