--- a/libs/shared/src/lib/components/article-summary/article-summary.component.html
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.html
@@ -1,13 +1,12 @@
 <a class="article-summary-outer-container" (click)="navigateTo(article.id)">
   <div class="article-summary-img-container">
     <img src="{{article.mainPicture.relativePath}}" alt="{{article.mainPicture.seoFileName}}">
-
   </div>
   <div class="main-article-summary-content" fxLayout="column" fxLayoutAlign="flex-start center">
-    <h4 class="article-summary-title">{{article?.title}}</h4>
-    <p class="article-summary-body">{{article?.body}}</p>
+    <h4 *ngIf="isTitleVisible" class="article-summary-title">{{article?.title}}</h4>
+    <p *ngIf="isTextVisible" class="article-summary-body">{{article?.body}}</p>
   </div>
 
-  <ant-article-summary-metadata fxFlexAlign="stretch" [article]="article"></ant-article-summary-metadata>
+  <ant-article-summary-metadata *ngIf="isMetadataVisible" fxFlexAlign="stretch" [article]="article"></ant-article-summary-metadata>
 
 </a>
