--- a/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.html
@@ -3,18 +3,39 @@
 
 
   <div fxHide.xs class="main-nav-link-container" fxFlex fxLayout="row" fxLayoutAlign="space-evenly center">
-      <div style="z-index: 9999999;">
+
     <a mat-button [routerLink]="['/section/eventos']">Eventos</a>
     <a mat-button [routerLink]="['/section/experiencias']">Experiencias</a>
     <a mat-button [routerLink]="['/section/galeria']">Galeria</a>
-    <a mat-button [matMenuTriggerFor]="entertainment" (mouseup)="onSelect($event)">Entretenimiento <mat-icon>keyboard_arrow_down</mat-icon></a>
-      <mat-menu #entertainment="matMenu" id="entertainment">
-        <a mat-menu-item [routerLink]="['/section/literatura']">Literatura</a>
-        <a mat-menu-item [routerLink]="['/section/deportes']">Deportes</a>
-        <a mat-menu-item [routerLink]="['/section/cine']">Cine</a>
-        <a mat-menu-item [routerLink]="['/section/cultura']">Cultura</a>
-      </mat-menu>
-    </div>
+    <a mat-button [matMenuTriggerFor]="entertainment">Entretenimiento
+      <mat-icon>keyboard_arrow_down</mat-icon>
+    </a>
+
   </div>
 
+  <button mat-button fxHide fxShow.gt-xs class="language-button" [matMenuTriggerFor]="languageMenu">
+    <div fxLayout="row" fxLayoutAlign="center center">
+      <img class="flag mr-8" [src]="'assets/images/flags/'+selectedLanguage.flag+'.png'">
+      <span class="iso text-uppercase">{{selectedLanguage.id}}</span>
+    </div>
+  </button>
+
+  <mat-menu #languageMenu="matMenu" [overlapTrigger]="false">
+
+    <button mat-menu-item *ngFor="let lang of languages" (click)="setLanguage(lang)">
+      <div fxLayout="row" fxLayoutAlign="start center">
+        <img class="flag mr-16" [src]="'assets/images/flags/'+lang.flag+'.png'">
+        <span class="iso">{{lang.title}}</span>
+      </div>
+    </button>
+
+  </mat-menu>
+
 </nav>
+
+<mat-menu #entertainment="matMenu" id="entertainment" [overlapTrigger]="false">
+  <a mat-menu-item [routerLink]="['/section/literatura']">Literatura</a>
+  <a mat-menu-item [routerLink]="['/section/deportes']">Deportes</a>
+  <a mat-menu-item [routerLink]="['/section/cine']">Cine</a>
+  <a mat-menu-item [routerLink]="['/section/cultura']">Cultura</a>
+</mat-menu>
