--- a/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.scss
+++ b/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.scss
@@ -1,9 +1,17 @@
 @import '../../../core/scss/ant.scss';
-@import "~bootstrap/dist/css/bootstrap.css";
+// @import "~bootstrap/dist/css/bootstrap.css";
 
+*:focus {
+  outline: none;
+}
 
 .main-nav-link-container {
   @include media-breakpoint-up('sm') {
     max-width: 80%;
   }
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: none;
 }
