Swap utilization of original components instead of deleted ones

--- a/apps/havana500-webclient/src/app/core/scss/core.scss
+++ b/apps/havana500-webclient/src/app/core/scss/core.scss
@@ -1,7 +1,5 @@
-
 // Ant
-@import "ant";
-
+@import 'ant';
 
 // @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
@@ -12,21 +10,21 @@
 @include angular-material-theme($theme);
 
 // Partials
-@import "partials/reset";
-@import "partials/normalize";
-@import "partials/scrollbars";
-@import "partials/helpers";
-@import "partials/global";
-@import "partials/icons";
-@import "partials/colors";
-@import "partials/material";
-@import "partials/angular-material-fix";
-@import "partials/typography";
-@import "partials/page-layouts";
-@import "partials/cards";
-@import "partials/navigation";
-@import "partials/forms";
-@import "partials/toolbar";
-@import "partials/print";
+@import 'partials/reset';
+@import 'partials/normalize';
+@import 'partials/scrollbars';
+@import 'partials/helpers';
+@import 'partials/global';
+@import 'partials/icons';
+@import 'partials/colors';
+@import 'partials/material';
+@import 'partials/angular-material-fix';
+@import 'partials/typography';
+@import 'partials/page-layouts';
+@import 'partials/cards';
+@import 'partials/navigation';
+@import 'partials/forms';
+@import 'partials/toolbar';
+@import 'partials/print';
 
-@import "~@ng-select/ng-select/themes/material.theme.css";
+@import '~@ng-select/ng-select/themes/material.theme.css';
