--- a/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
+++ b/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
@@ -1,5 +1,5 @@
-<hav-image-slider></hav-image-slider>
+<hav-principal-slider></hav-principal-slider>
 
-<section id="article-shortcut-container">
-  <hav-article-shortcuts></hav-article-shortcuts>
+<section >
+  <hav-entertainment-preview></hav-entertainment-preview>
 </section>
