--- a/libs/shared/src/lib/components/article-summary/article-summary.component.scss
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.scss
@@ -7,10 +7,11 @@ ant-article-summary,
   max-width: 30rem;
   background-color: $article-summary-bColor;
   box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
-  transition: all 0.3s ease-out;
+  transition: all 0.3s ease-in-out;
   display: block;
   cursor: pointer;
   margin-bottom: 0.5rem;
+  color: inherit;
 
   &:hover {
     text-decoration: none !important;
