Architect the main content section on home

--- a/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
+++ b/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
@@ -1,5 +1,12 @@
-<hav-principal-slider></hav-principal-slider>
+<main fxLayout="column">
 
-<section >
-  <hav-entertainment-preview></hav-entertainment-preview>
-</section>
+  <hav-principal-slider></hav-principal-slider>
+
+  <section class="main-section">
+    
+    <hav-entertainment-preview class="pt-40"></hav-entertainment-preview>
+
+  </section>
+
+
+</main>
