--- a/apps/havana500-webclient/src/app/features/layout/layout.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/layout.component.html
@@ -4,7 +4,7 @@
   </mat-toolbar>
 
   <div fxLayout="column" class="main-content container__overflowed">
-    <hav-content></hav-content>
+    <hav-content fxFlex="1 1 auto"></hav-content>
     <hav-footer class="main-footer"></hav-footer>
   </div>
 </div>
