--- a/apps/havana500-webclient/src/app/features/home/dummy/entertainment-preview/entertainment-preview.component.scss
+++ b/apps/havana500-webclient/src/app/features/home/dummy/entertainment-preview/entertainment-preview.component.scss
@@ -1,1 +1,33 @@
 @import '~bootstrap/dist/css/bootstrap.css';
+
+.section-name {
+  text-align: center;
+  padding: 2rem;
+  padding-top: 4rem;
+  cursor: pointer;
+}
+
+.article-summary-container {
+  padding: 1rem;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.mat-tab-body-content {
+  overflow: hidden !important;
+}
+
+.see-more-section {
+  color: inherit;
+  font-weight: 600;
+  font-size: 1.3rem;
+  padding-top: 1rem;
+  padding-bottom: 3rem;
+  transition: all 0.2s cubic-bezier(0, 1.13, 0.88, 1.32);
+
+  &:hover {
+    text-decoration: none !important;
+    transform: scale(1.2);
+    color: inherit;
+    text-shadow: 0px 4px 3px #00000040;
+  }
+}
