--- a/libs/shared/src/lib/components/article-metadata/article-metadata.component.scss
+++ b/libs/shared/src/lib/components/article-metadata/article-metadata.component.scss
@@ -1,25 +1,26 @@
 .metadata-icon {
   margin-right: 0.6rem;
-  font-size: 1em !important;
-  height: 1rem !important;
+  font-size: 2em !important;
+  height: fit-content !important;
   min-height: 1rem !important;
-  width: 1rem !important;
+  width: fit-content !important;
   min-width: 1rem !important;
-
 }
 
 .metadata-panel {
-  padding: 0 1rem;
+  padding: 0 2rem;
   min-height: 5rem;
   width: 100%;
-  font-size: .8em;
+  font-size: 0.8em;
 }
 
 .metadata-separator {
   height: 100%;
-    min-height: 20px;
-    border-right: 1px solid black;
-    margin: 0 0.4rem 0 0.4rem;
+  min-height: 20px;
+  border-right: 1px solid #00000061;
+  margin: 0 0.4rem 0 0.4rem;
 }
 
-
+.metadata-text {
+  font-size: 1.4em;
+}
