Remove outstanding-news and replace it with outstanding general articles

--- a/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
+++ b/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
@@ -3,7 +3,9 @@
   <hav-principal-slider></hav-principal-slider>
 
   <section class="main-section">
-    
+
+    <hav-outstanding-general-articles class="pt-40"></hav-outstanding-general-articles>
+
     <hav-entertainment-preview class="pt-40"></hav-entertainment-preview>
 
   </section>
