--- a/apps/havana500-webclient/src/app/features/home/dummy/principal-slider/principal-slider.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/principal-slider/principal-slider.component.html
@@ -1,3 +1,3 @@
-<slideshow [height]="height" [minHeight]="'525px'" [autoPlay]="true" [showArrows]="false" [imageUrls]="imageUrls"
-    [lazyLoad]="imageUrls?.length > 1" [autoPlayWaitForLazyLoad]="true">
+<slideshow [minHeight]="'525px'" [autoPlay]="true" [imageUrls]="imageUrls" [lazyLoad]="imageUrls?.length > 1"
+    [autoPlayWaitForLazyLoad]="true" [showCaptions]="false" [showArrows]="false">
 </slideshow>
