Set top-articles in home

--- a/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
+++ b/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
@@ -4,7 +4,7 @@
 
   <section class="main-section">
 
-    <hav-outstanding-general-articles class="pt-40"></hav-outstanding-general-articles>
+    <hav-outstanding-general-articles [totalItems]="5" class="pt-40"></hav-outstanding-general-articles>
 
     <hav-entertainment-preview class="pt-40"></hav-entertainment-preview>
 
