--- a/libs/shared/src/lib/modules/ui-carousel/dots/dots.component.scss
+++ b/libs/shared/src/lib/modules/ui-carousel/dots/dots.component.scss
@@ -14,6 +14,18 @@
   right: 10px;
 }
 
+:host(.flex-center) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: inherit;
+  margin-top: -9rem;
+  margin-bottom: 2rem;
+}
+
 :host(.middle) {
   bottom: 20px;
   left: 50%;
@@ -28,7 +40,7 @@
   height: 10px;
   width: 10px;
   border-radius: 5px;
-  background: white;
+  background: #818488;
   opacity: 0.6;
   margin: 0 4px;
   display: inline-block;
