Increase font-size of title and text of summary-article

--- a/libs/shared/src/lib/components/article-summary/article-summary.component.scss
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.scss
@@ -58,10 +58,12 @@ $article-summary-bColor: #ffffff;
   // text-align-last: center;
   font-weight: 600;
   padding-top: 1rem;
+  font-size: 1.8em;
 }
 
 .article-summary-body {
   text-align: justify;
+  font-size: 1.3em;
 }
 
 .article-image {
